--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,3 +12,77 @@
   #nprogress .spinner {
     display: none;
   }
+
+  .signin_input {
+    width: 100%;
+    font-size: 0.875rem; /* equivalent to text-sm */
+    border-bottom: 1px solid #D1D5DB; /* gray-300 */
+    padding: 0.75rem 0.5rem; /* py-3 px-2 */
+    outline: none;
+    transition: gray 0.3s ease;
+    border-color: #D1D5DB;
+  }
+
+  .signin_input:focus {
+    border-color: #2563EB; /* blue-600 */
+  }
+
+
+  .primary-btn {
+    width: 100%;
+    padding: 0.625rem 1rem;
+    font-size: 0.875rem;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    border-radius: 0.375rem;
+    color: #ffffff;
+    background-color: #2563eb;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    outline: none;
+    border: none;
+  }
+
+  .primary-btn:hover {
+    background-color: #1d4ed8;
+  }
+
+  .active-btn {
+    background-color: #3B82F6;
+    color: white;
+}
+
+.inactive-btn {
+    background-color: #4B5563;
+    color: white;
+}
+
+
+.badge-pill {
+    @apply inline-flex items-center px-4 py-2 text-sm font-medium rounded-full shadow-sm transition-transform transform hover:scale-105;
+  }
+
+  /* Color Variants */
+  .badge-pill-red {
+    @apply badge-pill bg-red-100 text-red-600 hover:bg-red-200;
+  }
+
+  .badge-pill-blue {
+    @apply badge-pill bg-blue-100 text-blue-600 hover:bg-blue-200;
+  }
+
+  .badge-pill-green {
+    @apply badge-pill bg-green-100 text-green-600 hover:bg-green-200;
+  }
+
+  .badge-pill-purple {
+    @apply badge-pill bg-purple-100 text-purple-600 hover:bg-purple-200;
+  }
+
+  .badge-pill-yellow {
+    @apply badge-pill bg-yellow-100 text-yellow-600 hover:bg-yellow-200;
+  }
+
+  .badge-pill-pink {
+    @apply badge-pill bg-pink-100 text-pink-600 hover:bg-pink-200;
+  }
