--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,88 +1,149 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 
-#nprogress .bar {
-    background: #2563eb; /* Blue-600 */
-    height: 4px;
-  }
-
-  /* Optional: Hide the spinner */
-  #nprogress .spinner {
-    display: none;
-  }
-
-  .signin_input {
-    width: 100%;
-    font-size: 0.875rem; /* equivalent to text-sm */
-    border-bottom: 1px solid #D1D5DB; /* gray-300 */
-    padding: 0.75rem 0.5rem; /* py-3 px-2 */
-    outline: none;
-    transition: gray 0.3s ease;
-    border-color: #D1D5DB;
-  }
-
-  .signin_input:focus {
-    border-color: #2563EB; /* blue-600 */
-  }
-
-
-  .primary-btn {
-    width: 100%;
-    padding: 0.625rem 1rem;
-    font-size: 0.875rem;
-    font-weight: 600;
-    letter-spacing: 0.05em;
-    border-radius: 0.375rem;
-    color: #ffffff;
-    background-color: #2563eb;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
-    outline: none;
-    border: none;
-  }
-
-  .primary-btn:hover {
-    background-color: #1d4ed8;
-  }
-
-  .active-btn {
-    background-color: #3B82F6;
-    color: white;
+:root {
+    --p-primary-50: #ecfdf5;
+    --p-primary-100: #d1fae5;
+    --p-primary-200: #a7f3d0;
+    --p-primary-300: #6ee7b7;
+    --p-primary-400: #34d399;
+    --p-primary-500: #10b981;
+    --p-primary-600: #059669;
+    --p-primary-700: #047857;
+    --p-primary-800: #065f46;
+    --p-primary-900: #064e3b;
+    --p-primary-950: #022c22;
+    --p-surface-0: #ffffff;
+    --p-surface-50: #fafafa;
+    --p-surface-100: #f4f4f5;
+    --p-surface-200: #e4e4e7;
+    --p-surface-300: #d4d4d8;
+    --p-surface-400: #a1a1aa;
+    --p-surface-500: #71717a;
+    --p-surface-600: #52525b;
+    --p-surface-700: #3f3f46;
+    --p-surface-800: #27272a;
+    --p-surface-900: #18181b;
+    --p-surface-950: #09090b;
+    --p-content-border-radius: 6px;
 }
 
-.inactive-btn {
-    background-color: #4B5563;
-    color: white;
+/* Light */
+:root {
+    --p-primary-color: var(--p-primary-500);
+    --p-primary-contrast-color: var(--p-surface-0);
+    --p-primary-hover-color: var(--p-primary-600);
+    --p-primary-active-color: var(--p-primary-700);
+    --p-content-border-color: var(--p-surface-200);
+    --p-content-hover-background: var(--p-surface-100);
+    --p-content-hover-color: var(--p-surface-800);
+    --p-highlight-background: var(--p-primary-50);
+    --p-highlight-color: var(--p-primary-700);
+    --p-highlight-focus-background: var(--p-primary-100);
+    --p-highlight-focus-color: var(--p-primary-800);
+    --p-text-color: var(--p-surface-700);
+    --p-text-hover-color: var(--p-surface-800);
+    --p-text-muted-color: var(--p-surface-500);
+    --p-text-hover-muted-color: var(--p-surface-600);
 }
 
 
-.badge-pill {
-    @apply inline-flex items-center px-4 py-2 text-sm font-medium rounded-full shadow-sm transition-transform transform hover:scale-105;
-  }
+:root[class='p-dark'] {
+    --body-bg: var(--p-surface-950);
+    --body-text-color: var(--p-surface-50);
+    --card-border: 1px solid transparent;
+    --card-bg: var(--p-surface-900);
+    --border-color: rgba(255, 255, 255, 0.1);
+    --text-color: var(--p-surface-0);
+    --overlay-background: var(--p-surface-900);
+}
 
-  /* Color Variants */
-  .badge-pill-red {
-    @apply badge-pill bg-red-100 text-red-600 hover:bg-red-200;
-  }
+/* Dark */
+@media (prefers-color-scheme: dark) {
+    :root {
+        --p-primary-color: var(--p-primary-400);
+        --p-primary-contrast-color: var(--p-surface-900);
+        --p-primary-hover-color: var(--p-primary-300);
+        --p-primary-active-color: var(--p-primary-200);
+        --p-content-border-color: var(--p-surface-700);
+        --p-content-hover-background: var(--p-surface-800);
+        --p-content-hover-color: var(--p-surface-0);
+        --p-highlight-background: color-mix(in srgb, var(--p-primary-400), transparent 84%);
+        --p-highlight-color: rgba(255, 255, 255, 0.87);
+        --p-highlight-focus-background: color-mix(in srgb, var(--p-primary-400), transparent 76%);
+        --p-highlight-focus-color: rgba(255, 255, 255, 0.87);
+        --p-text-color: var(--p-surface-0);
+        --p-text-hover-color: var(--p-surface-0);
+        --p-text-muted-color: var(--p-surface-400);
+        --p-text-hover-muted-color: var(--p-surface-300);
+    }
+}
 
-  .badge-pill-blue {
-    @apply badge-pill bg-blue-100 text-blue-600 hover:bg-blue-200;
-  }
 
-  .badge-pill-green {
-    @apply badge-pill bg-green-100 text-green-600 hover:bg-green-200;
-  }
+.badge-pill-red {
+    @apply inline-flex items-center px-4 py-2 bg-red-100 text-red-600 text-sm font-medium rounded-full border border-red-500 hover:bg-red-200 shadow;
+    @apply dark:bg-red-900 dark:text-red-300 dark:border-red-600 dark:hover:bg-red-800 dark:shadow-lg;
+}
 
-  .badge-pill-purple {
-    @apply badge-pill bg-purple-100 text-purple-600 hover:bg-purple-200;
-  }
+.badge-pill-blue {
+    @apply inline-flex items-center px-4 py-2 bg-blue-100 text-blue-600 text-sm font-medium rounded-full border border-blue-500 hover:bg-blue-200 shadow;
+    @apply dark:bg-blue-900 dark:text-blue-300 dark:border-blue-600 dark:hover:bg-blue-800 dark:shadow-lg;
+}
 
-  .badge-pill-yellow {
-    @apply badge-pill bg-yellow-100 text-yellow-600 hover:bg-yellow-200;
-  }
+.badge-pill-green {
+    @apply inline-flex items-center px-4 py-2 bg-green-100 text-green-600 text-sm font-medium rounded-full border border-green-500 hover:bg-green-200 shadow;
+    @apply dark:bg-green-900 dark:text-green-300 dark:border-green-600 dark:hover:bg-green-800 dark:shadow-lg;
+}
 
-  .badge-pill-pink {
-    @apply badge-pill bg-pink-100 text-pink-600 hover:bg-pink-200;
-  }
+.badge-pill-purple {
+    @apply inline-flex items-center px-4 py-2 bg-purple-100 text-purple-600 text-sm font-medium rounded-full border border-purple-500 hover:bg-purple-200 shadow;
+    @apply dark:bg-purple-900 dark:text-purple-300 dark:border-purple-600 dark:hover:bg-purple-800 dark:shadow-lg;
+}
+
+.badge-pill-yellow {
+    @apply inline-flex items-center px-4 py-2 bg-yellow-100 text-yellow-600 text-sm font-medium rounded-full border border-yellow-500 hover:bg-yellow-200 shadow;
+    @apply dark:bg-yellow-900 dark:text-yellow-300 dark:border-yellow-600 dark:hover:bg-yellow-800 dark:shadow-lg;
+}
+
+.badge-pill-pink {
+    @apply inline-flex items-center px-4 py-2 bg-pink-100 text-pink-600 text-sm font-medium rounded-full border border-pink-500 hover:bg-pink-200 shadow;
+    @apply dark:bg-pink-900 dark:text-pink-300 dark:border-pink-600 dark:hover:bg-pink-800 dark:shadow-lg;
+}
+.btn-red {
+    @apply px-4 py-2 bg-red-500 text-white text-sm font-medium rounded-lg border border-red-600 hover:bg-red-600 shadow-md;
+    @apply dark:bg-red-800 dark:text-red-300 dark:border-red-700 dark:hover:bg-red-700 dark:shadow-lg;
+}
+
+.btn-blue {
+    @apply px-4 py-2 bg-blue-500 text-white text-sm font-medium rounded-lg border border-blue-600 hover:bg-blue-600 shadow-md;
+    @apply dark:bg-blue-800 dark:text-blue-300 dark:border-blue-700 dark:hover:bg-blue-700 dark:shadow-lg;
+}
+
+.btn-green {
+    @apply px-4 py-2 bg-green-500 text-white text-sm font-medium rounded-lg border border-green-600 hover:bg-green-600 shadow-md;
+    @apply dark:bg-green-800 dark:text-green-300 dark:border-green-700 dark:hover:bg-green-700 dark:shadow-lg;
+}
+
+.btn-purple {
+    @apply px-4 py-2 bg-purple-500 text-white text-sm font-medium rounded-lg border border-purple-600 hover:bg-purple-600 shadow-md;
+    @apply dark:bg-purple-800 dark:text-purple-300 dark:border-purple-700 dark:hover:bg-purple-700 dark:shadow-lg;
+}
+
+.btn-yellow {
+    @apply px-4 py-2 bg-yellow-500 text-white text-sm font-medium rounded-lg border border-yellow-600 hover:bg-yellow-600 shadow-md;
+    @apply dark:bg-yellow-800 dark:text-yellow-300 dark:border-yellow-700 dark:hover:bg-yellow-700 dark:shadow-lg;
+}
+
+.btn-pink {
+    @apply px-4 py-2 bg-pink-500 text-white text-sm font-medium rounded-lg border border-pink-600 hover:bg-pink-600 shadow-md;
+    @apply dark:bg-pink-800 dark:text-pink-300 dark:border-pink-700 dark:hover:bg-pink-700 dark:shadow-lg;
+}
+
+
+.signin_input {
+    @apply block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400  focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6 dark:bg-gray-700
+
+}
+
